<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/ll_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible" >

        <ProgressBar
            style="@style/ProgressBarBig"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:indeterminateDrawable="@drawable/loading_bg" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/ll_complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp" >

                <ImageView
                    android:id="@+id/iv_book_cover"
                    android:layout_width="60dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/book_cover_loading" />

                <LinearLayout
                    android:id="@+id/ll_book_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/iv_book_cover"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tv_book_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/iv_complete"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="15dp"
                        android:src="@drawable/type_completedbook" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ll_book_name"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/iv_book_cover"
                    android:text="@string/app_name"
                    android:textColor="#a0907e" />

                <TextView
                    android:id="@+id/tv_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_category"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/iv_book_cover"
                    android:text="@string/app_name"
                    android:textColor="#a0907e" />

                <TextView
                    android:id="@+id/tv_new_chapter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_author"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/iv_book_cover"
                    android:text="@string/app_name"
                    android:textColor="#a0907e" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/ll_src"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/reflush_btn_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/download_src" />

                <TextView
                    android:id="@+id/tv_src"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/app_name" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/book_list_item_bg" />
            </LinearLayout>

            <Button
                android:onClick="download"
                android:textColor="@android:color/white"
                android:background="@drawable/btn_download_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/btn_download" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/description"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_book_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/no_description"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_load_err"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/network_error" />
    </LinearLayout>

</FrameLayout>